# MAS-WiSe23_24-TUB_MSc

./: .gitignore  LICENSE  README.md  delivery_data.csv  dijstra.py  main.py  pyproject.toml  requirements.txt  setup.sh  testPickPackage.py  vis_experiments.ipynb  vis_experiments2.ipynb
experiments/agent-proportions/20-80-2023-11-24 18-02-43.459822/: delivery_data.csv
experiments/agent-proportions/40-60-2023-11-24 18-42-35.108978/: delivery_data.csv
experiments/agent-proportions/60-40-2023-11-24 18-43-39.358910/: package_data.csv
experiments/agent-proportions/60-40-2023-11-24 18:43:39.358910/: delivery_data.csv
experiments/assignment2/: automatic_exp_basic.py  automatic_exp_iterative.py  experiment1.py  experiment2.py  info.md
experiments/assignment2/broker_roaming/: delivery_data.csv  messages.csv  (+1 more)
experiments/assignment3/: waiter_exp_cnp.py  waiter_exp_naive_fast.py  waiter_exp_naive_greedy.py  waiter_exp_refined_greedy.py
src/: experiment1.py  experiment2.py  main.py  saveTest.py  screencast_demo.py  waiter_exp.py  waiter_exp_cnp.py
src/agents/: agent.py  chain_agent.py  dijkstra.py  perception.py  pheromone_agent.py  tips_functions.py  utility_functions.py
src/constants/: environment.py  utility_functions.py
src/environment/: environment.py  kitchen.py  obstacle.py  package.py  package_counter.py  package_point.py
src/utils/: automatic_environment.py  files.py  grid2matrix.py  objects_parser.py  position.py
src/visualization/: merge.py  messages.py  save.py  save_grid.py
test/: communication_grid.py  communication_test.py  testPickPackage.py
(+185 files in other folders)
